--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
           "<all_urls>"
         ],
         "css": [
-          "style.css"
+          "styles/scout.css"
         ]
       }
     ],
